# pentagram

./: .gitignore  README.md  VIMS_alpOri271I_analysis_v2-Copy1.ipynb  VIMS_alpOri271I_analysis_v2.ipynb  VIMS_alpOri271I_analysis_v2.py  lightcurvewithgoodbaseline.csv  nicholso-isothermal-alpori271.out  nicholso-isothermal-metadata-alpori271.out  pyproject.toml  requirements.txt
pentagram/: HtoT.py  TtoH.py  __init__.py  alt_bin.py  alt_bin_dimensional.py  fit_iso_lmfit.py  fit_iso_tau_lmfit.py  fit_iso_tau_to_observations.py  fit_iso_to_observations.py  ftheta_hat.py  get_phi_tau_vals.py  get_phi_vals.py  htheta2sclht.py  hvalstheta2tsecflux.py  lightcurve_new.py  lnbarometric.py  lnbarometric2.py  nu2theta.py  plot_VIMS_data.py  plot_isofits.py  plot_isofits_CIRS.py  pro_lcgen_v2.py  pro_lcinvert.py  pro_refrac2profile.py
